# maxsum-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  FindEigen3.cmake  README.md  _discrete_function_8cpp.html  _discrete_function_8h.html  _discrete_function_8h_source.html  _domain_iterator_8cpp.html  _domain_iterator_8h.html  _domain_iterator_8h_source.html  _max_sum_controller_8cpp.html  _max_sum_controller_8h.html  _max_sum_controller_8h_source.html  _post_office_8h.html  _post_office_8h_source.html  annotated.html  classes.html  classmaxsum_1_1_bad_domain_exception-members.html  classmaxsum_1_1_bad_domain_exception.html  classmaxsum_1_1_discrete_function-members.html  classmaxsum_1_1_discrete_function.html  classmaxsum_1_1_domain_conflict_exception-members.html  classmaxsum_1_1_domain_conflict_exception.html  classmaxsum_1_1_domain_iterator-members.html  classmaxsum_1_1_domain_iterator.html  classmaxsum_1_1_empty_notice_exception-members.html  classmaxsum_1_1_empty_notice_exception.html  classmaxsum_1_1_inconsistent_domain_exception-members.html  classmaxsum_1_1_inconsistent_domain_exception.html  classmaxsum_1_1_max_sum_controller-members.html  classmaxsum_1_1_max_sum_controller.html  classmaxsum_1_1_no_such_element_exception-members.html  classmaxsum_1_1_no_such_element_exception.html  classmaxsum_1_1_out_of_range_exception-members.html  classmaxsum_1_1_out_of_range_exception.html  classmaxsum_1_1_post_office-members.html  classmaxsum_1_1_post_office.html  classmaxsum_1_1_unknown_address_exception-members.html  (+45 more)
include/: DiscreteFunction.h  DomainIterator.h  MaxSumController.h  PostOffice.h  common.h  exceptions.h  mainpage.h  maxsum.h  maxsum_c.h  register.h  util_containers.h
include/maxsum/: DiscreteFunction.h  DomainIterator.h  EigenIterator.h  EigenIteratorPlugin.h  EigenWithPlugin.h  MatrixBaseAddons.h  MaxSumController.h  PostOffice.h  StaticVector.h  common.h  types.h  util_containers.h
python/: maxsum.py  maxsum_test.py
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_75.js  all_76.js  all_77.js  all_7e.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_69.js  classes_6b.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_70.js  classes_72.js  classes_75.js  files_64.js  files_6d.js  files_70.js  files_72.js  files_75.js  functions_61.js  functions_62.js  functions_63.js  (+34 more)
src/: DiscreteFunction.cpp  DomainIterator.cpp  MaxSumController.cpp  maxsum_c.cpp  register.cpp
testdata/: genIndexTestData.m  ind2sub_baddata.csv  ind2sub_testdata.csv
tests/: agg1Harness.cpp  agg2Harness.cpp  cHarness.c  domainHarness.cpp  funHarness.cpp  limitsHarness.cpp  mathHarness.cpp  maxsumHarness.cpp  postHarness.cpp  stdHarness.cpp  utilHarness.cpp
